--- a/main.css
+++ b/main.css
@@ -425,6 +425,20 @@ a:link, a:visited {
   font-weight: 400;
   src: url(NotoSansLinearA-LinearB.ttf) format('truetype');
 }
+#target, #rects {
+    font-size: 20px;
+    text-align: center;
+    width: 500px;
+    border-radius: 5px;
+    background: rgba(0,0,0,0.9);
+    margin-left: 35%;
+    z-index: 1002;
+    color: #FFF;
+    position: relative;
+    overflow: hidden;
+    display: block;
+    margin: 0 auto;
+}
 #title {
     font-size: 10px;
     text-align: center;
@@ -449,9 +463,8 @@ a:link, a:visited {
     z-index: 1002;
     color: #FFF;
     position: relative;
-    overflow: hidden;
-    display: block;
     margin: 0 auto;
+    overflow-wrap: break-word;
 }
 #from_html_wrapper {
     display: none;
